--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: 'Poppins', sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   max-width: 1500px;
   margin: 0 auto;
 }
@@ -67,6 +67,7 @@ main {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  max-height: 90vh;
 }
 /*? HEADER SECTION ----- END */
 
@@ -561,14 +562,12 @@ input[type='radio']:checked + label {
 /*? BACKGROUND COLORS ----- END */
 
 @media (max-width: 800px) {
-  html,
   body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     padding: 0px;
     margin: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
   }
   header {
     padding: 0.5rem;
@@ -614,7 +613,7 @@ input[type='radio']:checked + label {
   main {
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 100vh;
   }
   .game-board {
     display: -webkit-box;
@@ -627,9 +626,9 @@ input[type='radio']:checked + label {
     margin-top: -5rem;
   }
   .flip-card {
-    height: 200px;
-    width: 280px;
-    margin: 0.5rem 0.5rem;
+    height: 220px;
+    width: 340px;
+    margin: 0.5rem 0 0 0;
   }
   #card-text-question {
     font-size: 18px;
@@ -654,8 +653,8 @@ input[type='radio']:checked + label {
     left: 0;
     height: 30px;
     width: 30px;
-    margin-top: 170px;
-    margin-left: 250px;
+    margin-top: 190px;
+    margin-left: 310px;
   }
   .hide-hint-button {
     font-size: 14px;
@@ -664,8 +663,8 @@ input[type='radio']:checked + label {
     position: absolute;
     top: 0;
     left: 0;
-    margin-top: 170px;
-    margin-left: 250px;
+    margin-top: 190px;
+    margin-left: 310px;
     height: 30px;
     width: 30px;
   }
@@ -706,14 +705,14 @@ input[type='radio']:checked + label {
     width: 250px;
   }
   .check-answer {
-    margin-top: 1.2rem;
+    margin-top: 2rem;
     color: black;
     font-weight: 300;
     border-radius: 25px;
     height: 50px;
   }
   .restart {
-    margin-top: 2.6rem;
+    margin-top: 2rem;
     color: black;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
